# neat

./: .gitignore  .gitmodules  CMakeLists.txt  GenAlgo.cpp  GenAlgo.hpp  Graph.cpp  Graph.hpp  GraphEval.cpp  GraphEval.hpp  neat.cpp  test.cpp  types.hpp
python/: gen.py  graph.py  test0.py  xor.py
